ARTEMIS-3304: replace use of deprecated constructors marked as for-removal since Java 16